[package]
name = "parameter"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = ["ㄗㄠˋ ㄑㄧˊ <tsao-chi@the-lingo.org>"]
repository = "https://github.com/tsao-chi/parameter.rs"
description = "parameter.rs: dynamic binding - inspired by parameter of Scheme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread_local = "1.1.3"
arc-swap = "1.3.0"
