[package]
name = "parameter"
version = "0.1.2"
edition = "2018"
license = "MPL-2.0"
authors = ["ㄗㄠˋ ㄑㄧˊ <tsao-chi@the-lingo.org>"]
repository = "https://github.com/tsao-chi/parameter.rs"
description = "parameter.rs: dynamic binding - inspired by parameter of Scheme"
documentation = "https://docs.rs/parameter"

[dependencies]
thread_local = "1.1.3"
arc-swap = "1.3.0"
owning_ref = "0.4.1"
